--- a/src/css/style.css
+++ b/src/css/style.css
@@ -7,6 +7,22 @@ body {
 }
 
 
+/*====Newletter Modal===*/
+
+#myModal {
+    border-radius: 25px;
+}
+
+#myModal .modal-header {
+    background-color: #116466;
+    color: #FFCB9A;
+}
+
+#myModal .modal-header .close {
+    color: #e9ecef;
+}
+
+
 /*============= TOP BAR HEADER =============*/
 
 .top-bar {
@@ -62,6 +78,10 @@ body {
 
 /*--Hamburger icon in navbar--*/
 
+.navbar-toggler button {
+    border-radius: 0rem!important;
+}
+
 .navbar-toggler-icon {
     height: 1em;
     width: 1em;
@@ -72,10 +92,6 @@ body {
 
 #carousel {
     box-shadow: 0 1rem 1rem rgba(0, 0, 0, 0.1);
-}
-
-.carousel-inner {
-    max-height: 40rem!important;
 }
 
 
@@ -119,7 +135,14 @@ body {
 }
 
 
+/*--THREE COLUMN SECTION--*/
+
+
 /*--This effects all btn-lg buttons on the page--*/
+
+.btn {
+    border-radius: 0rem;
+}
 
 .btn-lg {
     border-radius: 0;
@@ -128,7 +151,7 @@ body {
     border-width: medium;
 }
 
-.btn-danger {
+.btn-secondary {
     background-color: #d9b08c;
     border: .1rem solid #d9b08c;
 }
@@ -145,17 +168,17 @@ body {
 
 .btn-primary:focus {
     background-color: #1c7274!important;
-    border: .05rem solid #1c7274!important;
+    border: .1rem solid #1c7274!important;
 }
 
-.btn-danger:hover {
+.btn-secondary:hover {
     background-color: #ffcb94;
     border: .05rem solid #ffcb94;
 }
 
-.btn-danger:focus {
+.btn-secondary:focus {
     background-color: #ffcb94!important;
-    border: .05rem solid #ffcb94!important;
+    border: .1rem solid #fff;
 }
 
 
@@ -175,6 +198,14 @@ body {
 
 /*-- Emoji Navbar --*/
 
+a.emoji:hover {
+    background-color: #383838!important;
+}
+
+a.emoji:focus {
+    background-color: #383838!important;
+}
+
 .emoji {
     background-image: linear-gradient(to right, #4981b3, #ac2615);
     min-height: 0!important;
@@ -187,7 +218,7 @@ body {
 }
 
 .emoji .fa-shoe-prints {
-    color: #FFCB9A;
+    color: #fff;
 }
 
 
@@ -240,17 +271,6 @@ footer .svg-inline--fa:hover {
 
 /* Devices over 1650px (xl) */
 
-@media (min-width: 1649.98px) {
-    .carousel-inner {
-        max-height: 50rem!important;
-        min-width: 100%;
-    }
-    .carousel-item img {
-        position: relative;
-        top: -150px;
-    }
-}
-
 
 /* Devices under 1199px (xl) */
 
@@ -275,6 +295,28 @@ footer .svg-inline--fa:hover {
     }
     .btn-lg {
         font-size: .95rem;
+    }
+}
+
+
+/* Devices under 420px (md) */
+
+@media (max-width: 450px) {
+    .top-bar a {
+        font-size: 1rem;
+    }
+    .carousel-inner {
+        min-height: 500px;
+    }
+    .carousel-item img {
+        height: 500px;
+        object-fit: cover;
+    }
+    .first-header h1 {
+        font-size: 2.5rem;
+    }
+    .first-header div {
+        width: 80%!important;
     }
 }
 
