--- a/src/css/style.css
+++ b/src/css/style.css
@@ -52,8 +52,8 @@
                                                                 background: #116466!important;
                                                             }
                                                             
-                                                            .navbar .fa-hamburger {
-                                                                color: #FFCB9A;
+                                                            .navbar .fa-bars {
+                                                                color: #e9e9ef;
                                                             }
                                                             
                                                             .nav-item {
@@ -174,6 +174,16 @@
                                                                 overflow: hidden;
                                                                 /*-- Correction for iOS --*/
                                                             }
+                                                            /*---Modals in parallax section---*/
+                                                            
+                                                            .parallax-modal .modal-header {
+                                                                color: #e9e9ef;
+                                                                background: #116466;
+                                                            }
+                                                            
+                                                            .parallax-modal .close {
+                                                                color: #e9e9e9;
+                                                            }
                                                             /*-- Emoji Navbar --*/
                                                             
                                                             a.emoji:hover {
@@ -243,7 +253,7 @@
                                                             
                                                             @media (min-width: 1400px) {
                                                                 .carousel-item img {
-                                                                    height: 810px;
+                                                                    height: 600px;
                                                                     object-fit: cover;
                                                                 }
                                                             }
@@ -260,6 +270,9 @@
                                                             /* Devices under 992px (md) */
                                                             
                                                             @media (max-width: 991.98px) {
+                                                                .navbar .fa-bars {
+                                                                    font-size: 1.5rem;
+                                                                }
                                                                 .carousel-caption h1 {
                                                                     font-size: 2.5rem;
                                                                 }
@@ -276,14 +289,11 @@
                                                                 .top-bar a {
                                                                     font-size: 1rem;
                                                                 }
-                                                                .navbar .fa-hamburger {
-                                                                    font-size: 2rem;
-                                                                }
                                                                 .carousel-inner {
-                                                                    min-height: 500px;
+                                                                    min-height: 400px;
                                                                 }
                                                                 .carousel-item img {
-                                                                    height: 500px;
+                                                                    height: 400px;
                                                                     object-fit: cover;
                                                                 }
                                                                 .first-header h1 {
@@ -291,6 +301,12 @@
                                                                 }
                                                                 .first-header div {
                                                                     width: 80%!important;
+                                                                }
+                                                            }
+                                                            
+                                                            @media (max-width: 320px) {
+                                                                .navbar .fa-bars {
+                                                                    font-size: 1.4rem;
                                                                 }
                                                             }
                                                             /*============ BOOTSTRAP BREAK POINTS:
